# phydms

./: .buildinfo  .flake8  .gitignore  .travis.yml  AUTHORS  CHANGELOG.rst  CMakeLists.txt  CTestConfig.cmake  ChangeLog  Doxyfile  ExpCM.html  MANIFEST.in  Makefile.am  Makefile.in  NEWS  README.rst  acknowledgments.html  api.html  auxiliary_progs.html  bpp-seq.spec  configure  genindex.html  howtouse.html  implementation.html  index.html  indices_and_tables.html  installation.html  modules.html  objects.inv  phydms_analyzeselection_prog.html  phydms_comprehensive_prog.html  phydms_logoplot.html  phydms_plotselection_prog.html  phydms_prepalignment.html  phydms_prog.html  phydms_renumber_prog.html  phydms_testdivpressure_prog.html  phydmslib.constants.html  phydmslib.file_io.html  phydmslib.html  (+15 more)
phydmslib/Bpp/bpp-core/src/: CMakeLists.txt
phydmslib/Bpp/bpp-core/src/Bpp/: Exceptions.cpp
phydmslib/LSD/lsd/: README  configure.ac
phydmslib/LSD/lsd/examples/rooted_tree/: h1n1_cleaned_original_phyml_tree_ingroup.txt  h1n1_cleaned_original_phyml_tree_ingroup.txt.result  h1n1_cleaned_original_phyml_tree_ingroup.txt.result.date.newick  h1n1_cleaned_original_phyml_tree_ingroup.txt.result.newick
phydmslib/LSD/lsd/src/: Makefile.am  Makefile.in  config.h.in  estimate_root_relative_rooted.h  estimate_root_relative_unrooted.cpp  estimate_root_rooted.cpp  estimate_root_rooted.h  estimate_root_unrooted.cpp  lsd.cpp  options.cpp  readData.cpp  utils.cpp  utils.h
src/: CMakeLists.txt  dating.cpp  dating.h  dating_relative.cpp  dating_relative.h  estimate_root_relative_rooted.cpp  estimate_root_relative_unrooted.h  estimate_root_unrooted.h  options.h  readData.h  utils.cpp
src/Bpp/: Exceptions.h
src/Bpp/App/: ApplicationTools.h
src/Bpp/Graph/: AssociationGraphObserver.h  BasicONode.cpp  Graph.cpp  Graph.h  GraphObserver.h  TreeGraph.h
src/Bpp/Graphics/: RgbColor.h
src/Bpp/Graphics/Fig/: XFigGraphicDevice.cpp  XFigGraphicDevice.h
src/Bpp/Graphics/Font/: Font.h
src/Bpp/Graphics/Latex/: DvipsColorSet.cpp  PgfGraphicDevice.cpp
src/Bpp/Graphics/Molscript/: MolscriptColorSet.cpp
src/Bpp/Graphics/Svg/: SvgGraphicDevice.cpp
src/Bpp/Io/: OutputStream.h
src/Bpp/Numeric/: AbstractParameterAliasable.cpp  AbstractParameterAliasable.h  AbstractParametrizable.h  AutoParameter.cpp  DataTable.cpp  NumTools.cpp  Parameter.cpp  Parameter.h  ParameterList.h  ParametrizableCollection.h  VectorTools.h
src/Bpp/Numeric/Function/: MetaOptimizer.h  ThreePointsNumericalDerivative.cpp
src/Bpp/Numeric/Hmm/: FullHmmTransitionMatrix.cpp  FullHmmTransitionMatrix.h  HmmLikelihood.cpp  HmmLikelihood.h  HmmStateAlphabet.h  HmmTransitionMatrix.h  LogsumHmmLikelihood.cpp  LogsumHmmLikelihood.h  LowMemoryRescaledHmmLikelihood.h
src/Bpp/Numeric/Matrix/: Matrix.h  MatrixTools.h
src/Bpp/Numeric/Prob/: AbstractDiscreteDistribution.cpp  BetaDiscreteDistribution.cpp  ConstantDistribution.cpp  ExponentialDiscreteDistribution.cpp  GammaDiscreteDistribution.cpp  GammaDiscreteDistribution.h  InvariantMixedDiscreteDistribution.h  MixtureOfDiscreteDistributions.cpp  SimpleDiscreteDistribution.cpp  Simplex.cpp  TruncatedExponentialDiscreteDistribution.cpp  UniformDiscreteDistribution.cpp
src/Bpp/Numeric/Random/: RandomTools.cpp  RandomTools.h  Uniform01QD.cpp
src/Bpp/Numeric/Stat/: StatTools.cpp
src/Bpp/Phyl/NewLikelihood/: HmmProcessEmissionProbabilities.h  OneProcessSequenceEvolution.cpp
src/Bpp/Seq/: CoreSite.h  DistanceMatrix.cpp  DistanceMatrix.h  ProbabilisticSite.h  ProbabilisticSymbolListTools.h  Sequence.cpp  SequenceExceptions.cpp  SequencePositionIterators.cpp  SequenceTools.cpp  SequenceWithAnnotation.cpp  SequenceWithAnnotationTools.cpp  SequenceWithAnnotationTools.h  Site.cpp  Site.h  SymbolList.cpp  SymbolList.h  SymbolListTools.h
src/Bpp/Seq/Alphabet/: AbstractAlphabet.cpp  AbstractAlphabet.h  Alphabet.h  AlphabetExceptions.cpp  AlphabetNumericState.h  AlphabetTools.cpp  BinaryAlphabet.cpp  BinaryAlphabet.h  CaseMaskedAlphabet.h  DefaultAlphabet.cpp  DefaultAlphabet.h  IntegerAlphabet.h  LetterAlphabet.h  NucleicAlphabet.h  NumericAlphabet.cpp  NumericAlphabet.h  ProteicAlphabet.cpp  ProteicAlphabet.h  RNA.cpp  RNA.h  RNY.h  WordAlphabet.cpp  WordAlphabet.h
src/Bpp/Seq/AlphabetIndex/: AAChouFasmanBSheetIndex.h  AAChouFasmanTurnIndex.h  AAIndex1Entry.h  AAIndex2Entry.h  AAMassIndex.h  AASEA1030Index.h  AASEASup30Index.h  AAVolumeIndex.h  DefaultNucleotideScore.h  GranthamAAChemicalDistance.cpp  GranthamAAVolumeIndex.h  SimpleIndexDistance.h  SimpleScore.h  __BLOSUM50MatrixCode
src/Bpp/Seq/App/: SequenceApplicationTools.cpp
src/Bpp/Seq/Container/: AbstractSequenceContainer.cpp  AlignedSequenceContainer.cpp  MapSequenceContainer.cpp  SequenceContainerIterator.cpp  SequenceContainerTools.h  SiteContainerTools.cpp  VectorProbabilisticSiteContainer.cpp  VectorProbabilisticSiteContainer.h  VectorSiteContainer.cpp  VectorSiteContainer.h
src/Bpp/Seq/GeneticCode/: AscidianMitochondrialGeneticCode.h  EchinodermMitochondrialGeneticCode.cpp  EchinodermMitochondrialGeneticCode.h  GeneticCode.cpp  MoldMitochondrialGeneticCode.cpp  StandardGeneticCode.cpp  StandardGeneticCode.h  YeastMitochondrialGeneticCode.h
src/Bpp/Seq/Io/: AbstractIAlignment.h  BppOAlignmentReaderFormat.cpp  BppOAlignmentReaderFormat.h  BppOAlignmentWriterFormat.cpp  BppOAlphabetIndex1Format.cpp  BppOAlphabetIndex2Format.cpp  BppOSequenceReaderFormat.cpp  BppOSequenceReaderFormat.h  BppOSequenceStreamReaderFormat.cpp  BppOSequenceStreamReaderFormat.h  BppOSequenceWriterFormat.cpp  Clustal.cpp  Dcse.cpp  Fasta.cpp  Pasta.cpp  Pasta.h  PhredPhd.cpp  PhredPoly.cpp  Stockholm.cpp
src/Bpp/Text/: KeyvalTools.cpp  KeyvalTools.h  NestedStringTokenizer.cpp
src/Bpp/Utils/: AttributesTools.cpp
test/: CMakeLists.txt  PolynomialFunction.h  example.mase  test_containers.cpp  test_distributions.cpp  test_downhill.cpp  test_eigen.cpp  test_io.cpp  test_matrices.cpp  test_numconstants.cpp  test_powell.cpp  test_probseq.cpp  test_range.cpp  test_sequences.cpp  test_stats.cpp  test_text_tools.cpp  test_treeGraphObs.cpp  test_walker.cpp
(+912 files in other folders)
