bin_PROGRAMS = lsd

lsd_SOURCES = \
	lsd.cpp						\
	dating.cpp		dating.h		\
	dating_relative.cpp		dating_relative.h		\
	estimate_root_rooted.cpp	estimate_root_rooted.h		\
	estimate_root_unrooted.cpp	estimate_root_unrooted.h		\
	estimate_root_relative_rooted.cpp	estimate_root_relative_rooted.h		\
	estimate_root_relative_unrooted.cpp	estimate_root_relative_unrooted.h		\
	options.cpp		options.h		\
	readData.cpp		readData.h		\
	utils.cpp		utils.h

